--- a/css/index.css
+++ b/css/index.css
@@ -88,6 +88,10 @@ article {
     transform: scale(0.98);
   }
 }
+.resumelist {
+  list-style: none;
+  padding-left: 15px;
+}
 /*footer*/
 #footer {
   padding: 15px 0 2px 0;
