--- a/css/index.css
+++ b/css/index.css
@@ -1,16 +1,34 @@
 body {
+  margin: 0;
   padding-top: 55px;
   font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
     "Lucida Sans", Arial, sans-serif;
+  background-color: #b9c0b1;
+}
+/*text*/
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  color: rgba(76, 76, 76);
+}
+.bi:hover {
+  color: rgb(155, 165, 145) !important;
+}
+.no_underline {
+  text-decoration: none;
 }
 /*header*/
 .navbar,
 header {
-  background-color: rgb(187, 187, 187);
+  background-color: #b9c0b1;
 }
 .navbar-brand {
   padding-left: 10px;
   font-weight: 700;
+  color: rgb(76, 76, 76) !important;
 }
 .navbar-nav {
   padding-right: 15px;
@@ -19,28 +37,26 @@ a.nav-link {
   margin-left: 20px;
   margin-right: 20px;
   font-weight: 600;
+  color: rgb(76, 76, 76) !important;
 }
-
+a.nav-link:hover {
+  color: rgb(155, 165, 145) !important;
+}
 /*main*/
 main {
-  background-color: rgb(207, 207, 207);
   position: absolute;
   top: 0;
 }
 article {
-  background-color: cadetblue;
+  background-color: #fafafa;
 }
 #hello {
   font-family: "Times New Roman", Times, serif;
 }
-#presentation {
-  background-color: indianred;
+#about_me {
   padding-top: 60px;
 }
 /*cta*/
-.card {
-  max-width: 600px;
-}
 .bi-github {
   color: #333;
 }
@@ -55,12 +71,13 @@ article {
 }
 .card-footer {
   padding: 8px 0 0 0;
+  background-color: snow;
 }
 /*transition royalblue*/
 #blue {
-  font-weight: auto;
+  font-weight: normal;
   font-variant: normal;
-  color: auto;
+  color: currentColor;
   transition: font-weight 1s ease-in, color 1s ease-in;
 }
 #blue:hover {
@@ -69,6 +86,10 @@ article {
 }
 /*animation popupcard*/
 .card {
+  width: 400px;
+  max-width: 600px;
+  background-color: snow;
+  box-shadow: 0px 0px 0px 0px rgba(76, 76, 76, 0.29);
   transform: scale(0);
   animation: popupcard 8s;
   animation-delay: 2s;
@@ -77,20 +98,53 @@ article {
 @keyframes popupcard {
   0% {
     transform: scale(0);
-  }
-  25% {
-    transform: scale(0);
+    box-shadow: 0px 0px 0px 0px rgba(76, 76, 76, 0.29);
   }
   92% {
     transform: scale(1);
+    box-shadow: 15px 5px 50px 5px rgba(76, 76, 76, 0.29);
   }
   100% {
     transform: scale(0.98);
+    box-shadow: 5px 5px 15px 0px rgba(76, 76, 76, 0.29);
   }
 }
+/*resume*/
 .resumelist {
   list-style: none;
   padding-left: 15px;
+}
+/*showcase*/
+article#showcase {
+  background-color: #b9c0b1;
+}
+.showcase_img {
+  object-fit: contain;
+}
+/*contact*/
+.megaphone {
+  color: rgb(155, 165, 145);
+  font-size: 100pt;
+}
+.megaphone_mini {
+  color: rgb(155, 165, 145);
+  font-size: 30pt;
+}
+.contact {
+  font-size: 15pt;
+  font-weight: 600;
+  color: rgba(76, 76, 76);
+}
+.contact_icon {
+  font-size: 15pt;
+}
+.contact_link {
+  font-size: 12pt;
+  padding-left: 5px;
+  color: #212529;
+}
+.contact_link:hover {
+  color: rgb(155, 165, 145) !important;
 }
 /*footer*/
 #footer {
