--- a/css/index.css
+++ b/css/index.css
@@ -1,7 +1,6 @@
 :root {
   --background: #b9c0b1;
   --highlight: #9ba591;
-  --text: #11111;
   --headingsbold: #748067;
 }
 body {
@@ -20,7 +19,7 @@ h5,
 h6 {
   color: var(--headingsbold);
 }
-.bi:hover {
+.highlight:hover {
   color: var(--highlight) !important;
 }
 .no_underline {
@@ -45,17 +44,11 @@ a.nav-link {
   font-weight: 600;
   color: var(--headingsbold) !important;
 }
-a.nav-link:hover {
-  color: var(--highlight) !important;
-}
 /*main*/
 main {
   position: absolute;
   top: 0;
-} /*
-article {
-  background-color: #fafafa;
-}*/
+}
 #hello {
   font-family: "Times New Roman", Times, serif;
 }
@@ -70,7 +63,7 @@ article {
   color: #0077b5;
 }
 .bi-envelope-fill {
-  color: rgba(76, 76, 76);
+  color: #4c4c4c;
 }
 .card-text {
   background-color: #fafafa;
@@ -150,8 +143,5 @@ article {
   font-size: 12pt;
   padding-left: 5px;
   color: #212529;
-}
-.contact_link:hover {
-  color: var(--highlight) !important;
 }
 /*footer*/
